[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dumbpw"
version = "0.3.4"
description = "A bad password generator for bad websites with bad password policies"
authors = ["Ryan Delaney <ryan.patrick.delaney@protonmail.com>"]
license = "Apache 2.0"
readme = "README.rst"
repository = "https://github.com/rpdelaney/dumbpw"
homepage = "https://pypi.org/project/dumbpw"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
]

[tool.poetry.scripts]
dumbpw = "dumbpw.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
deal = "^4.19.1"

[tool.poetry.dev-dependencies]
black = "*"
deal-solver = "^0.1.0"
flake8 = "^4.0.1"
flake8-annotations-complexity = "^0.0.6"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^21.9.2"
flake8-comprehensions = "^3.7.0"
flake8-docstrings = "^1.6.0"
flake8-simplify = "^0.14.2"
hypothesis = "^6.39.4"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[tool.black]
line-length = 79
target_version = [ "py310",]

[tool.isort]
combine_star = true
indent = "    "
length_sort = false
line_length = 79
multi_line_output = 3
include_trailing_comma = true  # this prevents isort from fighting with black

[tool.poetry.dev-dependencies.isort]
version = "^5.10.1"
extras = [ "pyproject",]

[tool.pytest.ini_options]
console_output_style = "progress"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--doctest-modules",
    "--ignore=.pythonrc.py"
]
filterwarnings = ["error"]
xfail_strict = true

[tool.mypy]
plugins = ["deal.mypy"]

# any
disallow_any_decorated = true
disallow_any_explicit = false
disallow_any_expr = false
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true

# untyped
allow_untyped_globals = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true

# optionals
no_implicit_optional = true
strict_optional = true

# imports
follow_imports = "normal"
ignore_missing_imports = false

warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

strict_equality = true

# error formating
pretty = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ".venv.*"
ignore_errors = true
