[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[project]
name = "dumbpw"
version = "1.0.3"
description = "A bad password generator for bad websites with bad password policies"
authors = [{ name = "Ryan Delaney", email = "ryan.patrick.delaney+spammers.only@protonmail.com" }]
requires-python = ">=3.10"
readme = "README.rst"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]
dependencies = [
    "click>=8.0.3",
    "deal>=4.19.1",
]
repository = "https://github.com/rpdelaney/dumbpw"
homepage = "https://pypi.org/project/dumbpw"

[project.scripts]
dumbpw = "dumbpw.cli:cli"

[dependency-groups]
dev = [
    "deal-solver>=0.1.0",
    "hypothesis>=6.39.4",
    "mypy>=0.981",
    "ptpython>=3.0.23",
    "pytest>=6.2.5",
    "pytest-cov>=3.0.0",
    "ruff",
    "pre-commit>=4.5.1",
]

[tool.uv.build-backend]
module-name = "dumbpw"
module-root = ""

[tool.pytest.ini_options]
testpaths = ["dumbpw", "tests"]
console_output_style = "progress"
addopts = [
    "--cov=dumbpw",
    "--doctest-modules",
    "--strict-config",
    "--strict-markers",
    "-rA",
]
filterwarnings = ["error"]
xfail_strict = true

[tool.mypy]
plugins = ["deal.mypy"]

# any
disallow_any_decorated = true
disallow_any_explicit = false
disallow_any_expr = false
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true

# untyped
allow_untyped_globals = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true

# optionals
no_implicit_optional = true
strict_optional = true

# imports
follow_imports = "normal"
ignore_missing_imports = false

warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

strict_equality = true

# error formating
pretty = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ".venv.*"
ignore_errors = true
